--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,1 +1,94 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
+html {
+  box-sizing: border-box;
+}
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+p {
+  margin: 0;
+}
+body {
+  color: #212212;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+}
+.container {
+  padding-top: 25px;
+  max-width: 1200px;
+  margin: 0 auto 20px;
+  text-align: center;
+}
+img {
+  display: block;
+  max-width: 100%;
+  height: 180px;
+}
+.contain-form {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+    display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 40px;
+  background-color: rgb(32, 58, 145);
+}
+.load-more {
+  padding: 5px 10px;
+  background-color: rgb(32, 58, 145);
+  border-radius: 5px;
+  border: none;
+  color: white;
+
+  font-size: 15px;
+}
+.search-form {
+    
+  position: relative;
+    input {
+        font-size: 15px;
+        padding: 0 10px;
+        border-radius: 3px;
+        border: transparent;
+        width: 300px;
+        height: 25px;
+    }
+    button {
+        position: absolute;
+        right: 5px;
+        top: 50%;
+        transform: translateY(-50%);
+
+        background-color: transparent;
+        border: 1px solid #212212;
+        border-radius: 3px;
+    }
+}
+
+.gallery {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding: 0 30px;
+  display: flex;
+  gap: 20px 10px;
+  flex-wrap: wrap;
+}
+.photo-card {
+  width: calc((100% - 90px) / 4);
+}
+.info {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 5px;
+}
+.info-item {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
